fixed checkbox alignment and added tests.

--- a/manon/form-radio-variables.scss
+++ b/manon/form-radio-variables.scss
@@ -2,7 +2,7 @@
 /*---------------------- form-radio-variables.scss --------------------*/
 /*------------------------------------------------------------------------*/
 :root {
-  /* --form-radio-margin-right: ; */
+  --form-radio-margin-right: 0.75rem;
   --form-radio-align-self: flex-start;
   --form-radio-vertical-align: top;
   --form-radio-width: 1.25rem;
