--- a/manon/form-radio.scss
+++ b/manon/form-radio.scss
@@ -7,12 +7,13 @@ form {
   input[type="radio"] {
     margin: var(--form-radio-margin-right, 0);
     padding: 0;
-    align-self: var(--form-radio-align-self);
     vertical-align: var(--form-radio-vertical-align);
-    accent-color: var(--form-radio-background-color);
     cursor: var(--form-radio-cursor);
-    width: 1.25rem;
-    height: 1.25rem;
+    width: var(--form-radio-width);
+    min-width: var(--form-radio-width);
+    height: var(--form-radio-height);
+    align-self: var(--form-radio-align-self);
+    accent-color: var(--form-radio-background-color);
 
     & + label {
       width: auto;
